--- a/MHW Randomizer/MHW Randomizer.csproj
+++ b/MHW Randomizer/MHW Randomizer.csproj
@@ -168,6 +168,7 @@
     <Compile Include="src\Utility\BoyerMoore.cs" />
     <Compile Include="src\Utility\Utility.cs" />
     <Compile Include="ValueConverters\BaseValueConverter.cs" />
+    <Compile Include="ValueConverters\BooleanToVisibilityConverter.cs" />
     <Compile Include="ValueConverters\InverseBooleanConverter.cs" />
     <Compile Include="Viewmodels\Base\RelayCommand.cs" />
     <Compile Include="Viewmodels\Base\RelayCommandWithInputParam.cs" />
