--- a/MHW Randomizer/MHW Randomizer.csproj
+++ b/MHW Randomizer/MHW Randomizer.csproj
@@ -76,6 +76,9 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>MHW Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BetterFolderBrowser, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\BetterFolderBrowser.1.2.0\lib\BetterFolderBrowser.dll</HintPath>
@@ -392,6 +395,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Monster Icons\MHW_Ancient_Leshen_Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MHW Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.1.29.2\build\dotnet\Fody.targets" Condition="Exists('..\packages\Fody.1.29.2\build\dotnet\Fody.targets')" />
