Move the alnk function to its own class to use with expeditions and quests

--- a/MHW Randomizer/MHW Randomizer.csproj
+++ b/MHW Randomizer/MHW Randomizer.csproj
@@ -164,6 +164,7 @@
     <Compile Include="IoC.cs" />
     <Compile Include="Randomizers\ExpeditionRandomizer.cs" />
     <Compile Include="Randomizers\MonsterRandomizer.cs" />
+    <Compile Include="Monster Utility\Alnk.cs" />
     <Compile Include="Windows\ChoiceWindow.xaml.cs">
       <DependentUpon>ChoiceWindow.xaml</DependentUpon>
     </Compile>
