Add in the file deleting method if the randomized file json isn't present

--- a/MHW Randomizer/MHW Randomizer.csproj
+++ b/MHW Randomizer/MHW Randomizer.csproj
@@ -291,6 +291,7 @@
     <None Include="Data\eng_insectData.json" />
     <None Include="Data\eng_itemData.json" />
     <None Include="Data\eng_skillData.json" />
+    <None Include="Data\FileRemover\FilesToRemove.json" />
     <None Include="Data\FileRemover\FoldersToRemove.json" />
     <None Include="Data\Item Shop\Gear\ShopBow.json" />
     <None Include="Data\Item Shop\Gear\ShopCharge_Blade.json" />
