--- a/MHW Randomizer/MHW Randomizer.csproj
+++ b/MHW Randomizer/MHW Randomizer.csproj
@@ -164,6 +164,7 @@
     <Compile Include="GMD %28Cirilla%29\Structs\GMD.cs" />
     <Compile Include="IoC.cs" />
     <Compile Include="Monster Utility\Maps.cs" />
+    <Compile Include="Monster Utility\MonsterRewards.cs" />
     <Compile Include="Randomizers\ExpeditionRandomizer.cs" />
     <Compile Include="Randomizers\MonsterRandomizer.cs" />
     <Compile Include="Monster Utility\Alnk.cs" />
@@ -270,13 +271,6 @@
     </EmbeddedResource>
     <None Include="Chunk\keyseq.key" />
     <None Include="Data\alnk\Iceborne Arenas" />
-    <None Include="Data\alnk\m101 Flying" />
-    <None Include="Data\alnk\m102 Flying" />
-    <None Include="Data\alnk\m103 Flying" />
-    <None Include="Data\alnk\m104 Flying" />
-    <None Include="Data\alnk\m105 Flying" />
-    <None Include="Data\alnk\m108 Flying" />
-    <None Include="Data\alnk\m109 Flying" />
     <None Include="Data\Armour\Arms.json" />
     <None Include="Data\Armour\Chest.json" />
     <None Include="Data\Armour\Head.json" />
